--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/helpers.php"
+        ],
         
         "authors": [
             {
